@@ -7,7 +7,11 @@ namespace IntaRNA {
 
 ////////////////////////////////////////////////////////////////
 
-const size_t IndexRange::LAST_INDEX = std::numeric_limits<size_t>::max();
+const size_t IndexRange::NA_INDEX = std::numeric_limits<size_t>::max();
+
+////////////////////////////////////////////////////////////////
+
+const size_t IndexRange::LAST_INDEX = IndexRange::NA_INDEX-1;
 
 ////////////////////////////////////////////////////////////////
 
